--- a/app/src/main/res/drawable/bg_weight_loss_button.xml
+++ b/app/src/main/res/drawable/bg_weight_loss_button.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item >
+        <shape android:shape="oval">
+           <size android:height="20dp" android:width="0dp"/>
+            <solid android:color="@color/white"/>
+        </shape>
+    </item>
+
     <item android:left="8dp" android:top="8dp" android:bottom="8dp" android:right="8dp">
         <shape android:shape="oval">
             <stroke android:color="@color/white" android:width="4dp" />
@@ -19,6 +26,8 @@
             <stroke android:color="@color/Orange" android:width="5dp" />
         </shape>
     </item>
+
+
 
 
 
