--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,37 +12,37 @@
         android:layout_height="wrap_content"
         android:weightSum="100">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/addSongsButton"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:padding="8dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/ic_action_name"
+            android:src="@drawable/ic_action_name"
             android:onClick="addSongs" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/burgerButton"
+            android:padding="8dp"
+            android:background="?selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/burgermenu"
+            android:src="@drawable/burgermenu"
             android:onClick="goToMenu" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="45dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/albumImageView"
-            android:layout_width="170dp"
-            android:layout_height="170dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center"
             android:src="@drawable/photoalbum"
 
@@ -54,9 +55,9 @@
             android:layout_alignBottom="@+id/albumImageView"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:text="Song"
             android:textSize="19sp"
             android:textStyle="bold"
+            tools:text="Song"
 
             />
 
@@ -65,8 +66,9 @@
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:layout_gravity="center"
-            android:text="Artist"
+            android:text="add your songs..."
             android:textSize="19sp" />
+
     </LinearLayout>
 
     <!-- TODO 22.02 #2 -->
@@ -74,13 +76,16 @@
     <FrameLayout
         android:id="@+id/songsLayout"
         android:layout_width="match_parent"
-        android:layout_alignTop="@id/playerPanelLayout"
-        android:layout_height="100dp">
+        android:layout_height="300dp"
+        android:layout_alignTop="@id/playerPanelLayout">
 
-        <View
-            android:background="@color/Orange"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@drawable/backgroundplayerlist"/>
+
     </FrameLayout>
 
     <LinearLayout
@@ -98,8 +103,10 @@
             android:layout_gravity="bottom|right"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/playlist"
-            android:onClick="listSongs" />
+            android:src="@drawable/playlist"
+            android:onClick="listSongs"
+            android:padding="10dp"
+            android:background="?selectableItemBackgroundBorderless"/>
 
 
         <LinearLayout
@@ -135,160 +142,182 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="30dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="100">
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
-            <View
+
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="50" />
-
-            <ImageButton
-                android:id="@+id/prevSong"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/leftarrow"
-                android:gravity="center"
-                android:onClick="playPrevBtnOnClick"
-                tools:ignore="OnClick" />
+                android:layout_weight="1">
 
-            <View
-                android:layout_width="70dp"
-                android:layout_height="0dp" />
+                <ImageView
+                    android:id="@+id/prevSong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
+                    android:padding="8dp"
+                    android:src="@drawable/leftarrow"
+                    android:onClick="playPrevBtnOnClick"
+                    android:background="?selectableItemBackgroundBorderless"
 
-            <ImageButton
-                android:id="@+id/playBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/playbutton"
-                android:gravity="center"
-                android:onClick="playBtnOnClick"
-                android:elevation="4dp"
+                    />
 
-                />
+            </FrameLayout>
 
-            <View
-                android:layout_width="70dp"
-                android:layout_height="0dp" />
 
-            <ImageButton
-                android:id="@+id/prevBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/rightarrow"
-                android:gravity="center"
-                android:onClick="playNextBtnOnClick"
-                tools:ignore="OnClick" />
-
-            <View
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="50" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/playBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/playbutton"
+                    android:onClick="playBtnOnClick" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/prevBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/rightarrow"
+                    android:onClick="playNextBtnOnClick"
+                    android:padding="8dp"
+                    android:background="?selectableItemBackgroundBorderless"
+                    tools:ignore="OnClick" />
+            </FrameLayout>
+
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="20dp" />
 
 
-        <LinearLayout
+
+        <RelativeLayout
+            android:id="@+id/rl"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <SeekBar
+                android:layout_marginTop="20dp"
+                android:id="@+id/positionBar"
+                android:layout_width="330dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                />
+
             <TextView
+                android:layout_alignLeft="@id/positionBar"
+                android:layout_alignParentTop="true"
                 android:id="@+id/elapsedTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
                 android:text="0:00"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
 
             <TextView
+                android:layout_alignRight="@id/positionBar"
                 android:id="@+id/remainingTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="270dp"
                 android:text="0:00"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
 
 
-        </LinearLayout>
-
-        <SeekBar
-            android:id="@+id/positionBar"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:paddingStart="6dp" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="80dp" />
-
+    </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
             android:orientation="horizontal">
 
-            <View
-                android:layout_width="30dp"
-                android:layout_height="0dp" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/share"
-                android:onClick="shareBtnOnClick"/>
+                android:layout_weight="1">
 
-            <View
-                android:layout_width="85dp"
-                android:layout_height="0dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/share"
+                    android:padding="8dp"
+                    android:onClick="shareBtnOnClick"
+                    android:background="?selectableItemBackgroundBorderless"
+                    />
 
-            <ImageButton
-                android:layout_width="wrap_content"
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/repeat2"
-                android:onClick="repeatBtnOnClick"/>
+                android:layout_weight="1">
 
-            <View
-                android:layout_width="85dp"
-                android:layout_height="0dp" />
+                <ImageView
+                    android:id="@+id/repeatImageView"
+                    android:padding="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/repeat2"
+                    android:onClick="repeatBtnOnClick" />
+            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/shuffleImageView"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:onClick="shufleBtnOnClick"
-                android:padding="8dp"
-                android:src="@drawable/shuffle" />
+                android:layout_weight="1">
 
-            <View
-                android:layout_width="85dp"
-                android:layout_height="0dp" />
+                <ImageView
 
-            <ImageButton
-                android:layout_width="wrap_content"
+                    android:id="@+id/shuffleImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:onClick="shufleBtnOnClick"
+                    android:padding="8dp"
+                    android:src="@drawable/shuffle"
+                    />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/more" />
+                android:layout_weight="1">
 
-            <View
-                android:layout_width="30dp"
-                android:layout_height="0dp" />
+                <ImageView
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/more" />
+            </FrameLayout>
 
         </LinearLayout>
 
@@ -324,4 +353,5 @@
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
+
 </RelativeLayout>
